<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/diagonal_view_height"
                android:background="@drawable/wedged_shape_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/brief_detail_cv"
                style="@style/CardItemStyle"
                android:layout_marginTop="?android:attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/medium_spacing">

                    <TextView
                        android:id="@+id/recipe_name_label_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/large_spacing"
                        android:layout_marginTop="@dimen/no_spacing"
                        android:text="@string/recipe_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/recipe_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/xlarge_spacing"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        app:layout_constraintBaseline_toBaselineOf="@+id/recipe_name_label_tv"
                        app:layout_constraintStart_toEndOf="@+id/recipe_name_label_tv"
                        tools:text="@tools:sample/first_names" />

                    <TextView
                        android:id="@+id/servings_label_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/large_spacing"
                        android:text="@string/servings"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                        app:layout_constraintStart_toStartOf="@+id/recipe_name_label_tv"
                        app:layout_constraintTop_toBottomOf="@+id/recipe_name_label_tv" />

                    <TextView
                        android:id="@+id/servings_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        app:layout_constraintBaseline_toBaselineOf="@+id/servings_label_tv"
                        app:layout_constraintStart_toStartOf="@+id/recipe_name_tv"
                        tools:text="8" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ingredients_cv"
                style="@style/CardItemStyle"
                android:layout_marginTop="@dimen/medium_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brief_detail_cv">

                <TextView
                    android:id="@+id/ingredients_label_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ingredients"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/steps_cv"
                style="@style/CardItemStyle"
                android:layout_marginTop="@dimen/medium_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_cv">

                <TextView
                    android:id="@+id/steps_label_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/steps"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1" />
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>